PROJECT(OracleReader)
FIND_PACKAGE(ParaView REQUIRED)
INCLUDE(${PARAVIEW_USE_FILE})

ADD_PARAVIEW_PLUGIN(OracleReaderClientPlugin "1.0"
	GUI_RESOURCES OracleReader.qrc)

ADD_PARAVIEW_PLUGIN(OracleReaderSMPlugin "1.0"
	SERVER_MANAGER_XML OracleReader.xml
	SERVER_MANAGER_SOURCES vtkOracleReader.cpp)
	
INCLUDE_DIRECTORIES(../../common)

set(ORACLE_INCLUDE_DIR "C:/"
CACHE PATH "Select the ORACLE include directory")
INCLUDE_DIRECTORIES(${ORACLE_INCLUDE_DIR})

set(ORACLE_LIB "C:/"
CACHE PATH "Select the ORACLE lib")

set(ORACLE_DLL "C:/"
CACHE PATH "Select the ORACLE dll")

target_link_libraries (OracleReaderSMPlugin ${ORACLE_LIB} )


#CPACK CODE TO BUNDLE THE DLLS CORRECTLY
INSTALL(TARGETS OracleReaderClientPlugin OracleReaderSMPlugin
	RUNTIME DESTINATION bin/plugins COMPONENT Runtime
	LIBRARY DESTINATION bin/plugins 
	ARCHIVE DESTINATION bin/plugins 
  )
		
FILE(GLOB ORACLE_LIB_FILE ORACLE_LIB)
FILE(GLOB ORACLE_DLL_FILE ORACLE_DLL)

LIST(APPEND ORACLE_BINARY ${ORACLE_LIB} ${ORACLE_DLL})

INSTALL(FILES ${ORACLE_BINARY}
	DESTINATION bin
	COMPONENT Runtime
	)	